--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@
 theme: jekyll-theme-cayman
 #add a title
 title: "Gabi Davidson-Gomez"
+#add a description
+description: "Welcome to my portfolio! I'm Gabi Davidson-Gomez, an early-career professional seeking opportunities in GIS and environmental education. Keep browsing to view my professional experience, recent projects, and more!"
